# client-srp6

./: BigNum.cpp  BigNum.h  CMakeLists.txt  LICENSE  README.md  libsrp6.cpp  libsrp6.h
Auth/: BigNumber.cpp  BigNumber.h  CryptoHash.h  SRP6.cpp  SRP6.h
